--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -5,15 +5,22 @@
   "type": "module",
   "types": "index.d.ts",
   "scripts": {
-    "build":"tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "start": "node ./dist/index.js",
-    "dev":"npm run build && npm run start"
+    "dev": "npm run build && npm run start"
   },
   "devDependencies": {
-    "@repo/typescript-config":"workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@repo/db": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
+  }
 }
