--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev":  " dotenv -e ./.env -- turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
@@ -18,6 +18,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "dotenv-cli": "^11.0.0",
     "zod": "^4.1.12"
   }
 }
