--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,10 +14,18 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "init": "^0.1.2",
+    "lucide-react": "^0.554.0",
     "next": "^16.0.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.1.0",
+    "shadcn": "^3.5.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
@@ -27,6 +35,7 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.38.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.9.2"
   }
 }
