feat: Add new database package with Prisma client and dotenv.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,7 +8,7 @@
     "./db": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc -b"
+    "build": "prisma generate && tsc -b"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
